--- a/7_panorama/2_frames_matching.tex
+++ b/7_panorama/2_frames_matching.tex
@@ -20,15 +20,15 @@
 
 У 1999 році англієць Девід Лоу представив алгоритм SIFT (scale-invariant feature transform)
 \cite{sift} (укр. масштабонезалежне перетворення ознак). Даний алгоритм
-застовується для знаходження ключових точок (локальних ознак) (англ. feature points, keypoints) зображення. 
+застовується для знаходження ключових точок (локальних ознак) (англ. feature points, keypoints) зображення.
 Метод досить точно і швидко знаходить дані точки.
 Головною перевагою алгоритму є інваріантність щодо просторової орієнтації та якості освітлення.
 Має широке застосування в області комп'ютерного зору як один з кроків для побудови 3D-карт,
 ректифікації стереопари та виявлення об'єктів.
 
-Ми можемо також використовувати дескриптори ознак, такі як SURF \cite{surf} або ORB \cite{orb}, 
-щоб знайти ключові точки, але був обраний SIFT, 
-оскільки під час експериментів він надав візуально кращі результати, ніж 
+Ми можемо також використовувати дескриптори ознак, такі як SURF \cite{surf} або ORB \cite{orb},
+щоб знайти ключові точки, але був обраний SIFT,
+оскільки під час експериментів він надав візуально кращі результати, ніж
 інші алгоритми.
 
 Коротко розпишемо структуру алгоритму.
@@ -37,12 +37,12 @@
     \item Пошук масштабно-просторових екстремумів.
           На даному етапі потрібно знайти зони зображення та такі масштаби, які можна повторно
           знайти при різних перспективах (точок погляду). Тут використовується просторове та
-          масштабно інваріантне ядро оператора Ґаусса з операцією згортки 
-          до зображення 
+          масштабно інваріантне ядро оператора Ґаусса з операцією згортки
+          до зображення
           \begin{equation*}
               L(x,y,\sigma) = G(x,y,\sigma) \ast I(x,y),
           \end{equation*}
-          де 
+          де
           \begin{equation*}
               G(x,y,\sigma) = (1/2\pi\sigma^2)\exp({-(x^2+y^2)/2\sigma^2}).
           \end{equation*}
@@ -66,7 +66,7 @@
               }
           \end{figure}
 
-          \subitem Пошук локальних екстремумів. Для знаходження локальних екстремумів 
+          \subitem Пошук локальних екстремумів. Для знаходження локальних екстремумів
           (рис. \ref{fig:swift2}) зображення
           різниці ґауссіан якоїсь точки беруться 8 сусідів цього ж зображення і 9 зображення
           різниць зверху та знизу. Точка є екстремумом, якщо її значення більше або менше за
@@ -80,8 +80,8 @@
               }
           \end{figure}
 
-          \subitem Частота вибірки по масштабу. Тут автор обґрунтовує кількість того, 
-          скільки разів потрібно робити зміну масштабу зображення. 
+          \subitem Частота вибірки по масштабу. Тут автор обґрунтовує кількість того,
+          скільки разів потрібно робити зміну масштабу зображення.
           Експерименти показують (рис. \ref{fig:swift3}),
           що на даному етапі метод дає велику кількість кандидатів екстремумів,
           і що дуже важко обрахувати їх всіх.
@@ -94,12 +94,12 @@
                   \label{fig:swift3}
               }
           \end{figure}
-          \subitem Частота вибірки по простору. Пропонується використовувати оптимальне значення 
+          \subitem Частота вибірки по простору. Пропонується використовувати оптимальне значення
           $\sigma = 1.6$, при якому
           маємо найбільший відсоток збігів екстремумів при багаторазовому повторенні
           експерименту.
 
-    \item Точна локалізація ключових точок. Після знаходження точок-кандидатів потрібно 
+    \item Точна локалізація ключових точок. Після знаходження точок-кандидатів потрібно
           відсіяти точки зі слабким контрастом на основі
           інформації про масштаб та відношення головних викривлень. Для цього застосовується розклад
           Тейлора масштабно-просторової функції $D(x,y,\sigma)$ в точці $\boldsymbol{x} = (x,y,\sigma)$.
@@ -144,7 +144,7 @@
           Таким чином  ми обмежуємо $|D(\widehat{\boldsymbol{x}})| < \alpha$.
           Якщо кожен піксель в діапазоні $[0,1]$, то і
           $ \alpha \in [0,1]$.
-    \item Визначення орієнтації градієнтів. 
+    \item Визначення орієнтації градієнтів.
           До кожної точки визначається декілька орієнтацій градієнтів.
           Довжина градієнта по сусідам $m(x,y)$ та його орієнтація $\theta(x,y)$:
           \begin{equation*}
@@ -155,7 +155,7 @@
           \end{equation*}
           де $L(x,y)$ ~---~ значення згладженого ґауссового зображення з найближчим масштабом.
 
-    \item Дескриптор точок. 
+    \item Дескриптор точок.
           Локальні градієнти обчислюються для кожного масштабу навколо кожної ключової точки.
           На рис. \ref{fig:swift6} наведено створення дескрипторів кожної ключової точки.
           \begin{figure}[H]
@@ -181,34 +181,36 @@
 Нехай $D^i$ та $D^{i+s}$~---~множини дескрипторів кадрів \(F^{i}\) та \(F^{i + s}\)
 відповідно. Мета~---~отримати множину \(M^{i,i+s}\) усіх знайдених відповідних точок  між кадрами
 \(F^{i}\) і \(F^{i + s}\).
-Повний перебір (англ. brute force matcher) був використаний для знаходження відповідних точок.
+Повний перебір (англ. brute force matcher) (алгоритм \ref{al:brute-force-matcher})
+був використаний для знаходження відповідних точок.
+
 \begin{algorithm}[H]
     \caption{Алгоритм Brute Force Matcher}
+    \label{al:brute-force-matcher}
     \begin{algorithmic}
         \State \textbf{Вхід:} множини дескрипторів $D^i$ та $D^{i+s}$.
         \State \textbf{Вихід:} множина відповідних точок \(M^{i,i+s}\).
-        \State \textbf{Ініціалізація:} Створюємо множину відповідних дескрипторів $D^{i,i+s}$
-        \State $\forall i \in D^i$:
+        \State \textbf{Ініціалізація:} Створюємо множину відповідних дескрипторів $D^{i,i+s}$.
+        \State $\forall i \in D^i$
         \State  \qquad $h^{min}_{i,j} \gets 0$
-        \State  \qquad  $\forall j \in D^{i+s}$:
+        \State  \qquad  $\forall j \in D^{i+s}$
         \State  \qquad \qquad  $h_{i,j} \gets distance(i,j)$
         \State  \qquad \qquad  Якщо {$h_{i,j} \leq h^{min}_{i,j}$}
         \State  \qquad \qquad  \qquad $j$ є відповідним  дескриптором для $i$, додаємо до  $D^{i,i+s}$
         \State З $D^{i,i+s}$ формуємо \(M^{i,i+s}\)
     \end{algorithmic}
-    \label{al:brute-force-matcher}
 \end{algorithm}
 
 Тобто для кожного дескриптора першого зображення шукаємо найближчий на другому.
 Маючи список відповідних дескрипторів можна знайти відповідні точки на обох зображеннях.
 
 Приклад застосування SIFT разом з Brute Force Matcher на
-дошці з викладачем наведений на  рис. \ref{fig:matches_img}.
+дошці з викладачем наведений на рис. \ref{fig:matches_img}.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=1\textwidth]{images/matches_img}
-    \caption{Кадри $F^i$ та $F^{i+s}$ з ключовими точками та лініями,
+    \includegraphics[width=0.55\textwidth]{images/matches_img}
+    \caption{Кадри $F^i$ (верхній) та $F^{i+s}$ (нижній) із ключовими точками та лініями,
         які поєднують відповідні точки з відео \cite{yakovlev_discrete_math_video}
         \label{fig:matches_img}
     }
