--- a/7_panorama/3_homography_estimation.tex
+++ b/7_panorama/3_homography_estimation.tex
@@ -25,8 +25,8 @@
 значного негативного впливу на якість результату.
 
 Знаходження $H$ вимагає знаходження всіх 9 параметрів матриці \eqref{eq:h_matrix}.
-Візьмемо пару відповідних точок $T$ та $T'$: $T = ((x_1,y_1,1), (x_2,y_2,1), 
-(x_3,y_3,1), (x_4,y_4,1)), T' = ((x'_1,y'_1,1), (x'_2,y'_2,1), (x'_3,y'_3,1), (x'_4,y'_4,1))$.
+Візьмемо пару відповідних точок $T$ та $T'$: $T = ((x_1,y_1,1), (x_2,y_2,1),
+    (x_3,y_3,1), (x_4,y_4,1)), T' = ((x'_1,y'_1,1), (x'_2,y'_2,1), (x'_3,y'_3,1), (x'_4,y'_4,1))$.
 Перепишемо \eqref{eq:h_connection} у матричній формі для $T$ та $T'$.
 \begin{equation}
     \begin{bmatrix}
@@ -96,7 +96,7 @@
     \label{eq:honography_svd}
 \end{equation}
 
-Для оцінки гомографії використали принцип RANSAC \cite{ransac}.
+Для оцінки гомографії використали принцип RANSAC \cite{ransac} (алгоритм \ref{al:ransac_homography}).
 Користувач вводить рівень \(\varepsilon > 0\)
 дозволеної похибки розрахунків ~---~ що менше, то краще, проте тим довше
 буде працювати алгоритм пошуку матриці гомографії
@@ -112,6 +112,7 @@
 
 \begin{algorithm}[H]
     \caption{Алгоритм знаходження гомографії за принципом RANSAC}
+    \label{al:ransac_homography}
     \begin{algorithmic}
         \State \textbf{Вхід:} $M^{i,i+s}$ - множина відповідних точок, $\varepsilon$ та $n$ - кількість ітерацій.
         \State \textbf{Вихід:} $H^{best}$ - найкраща матриця гомографії.
@@ -130,7 +131,8 @@
 використовуємо для оцінки гомографії, але також видаляємо ті ключові
 точки, які потрапляють в область маски рухомих об'єктів.
 Таким чином, ми зменшуємо ймовірність того, що замість дошки алгоритм ``зачепиться'' за одяг
-викладача або інші рухомі об'єкти. На рис. \ref{fig:yakovlev:keypoints:b} можна помітити, що
+викладача (рис. \ref{fig:matches_img}) або інші рухомі об'єкти.
+На рис. \ref{fig:yakovlev:keypoints:b} можна помітити, що
 існують точки, які насправді не належать рухомим об'єктам кадру
 \(F^{i + s}\), але були видалені. Це відбулось через те, що такі точки
 відповідають точкам з кадру \(F^{i}\), які в свою чергу лежать в межах маски рухомих об'єктів.
@@ -153,7 +155,7 @@
             \label{fig:yakovlev:keypoints:b}
         }
     \end{subfigure}
-    \caption{Результат застосування маски для відповідних точок з відео \cite{yakovlev_video}
+    \caption{Результат застосування маски для відповідних точок з відео \cite{yakovlev_discrete_math_video}
         \label{fig:yakovlev:keypoints}
     }
 \end{figure}
