--- a/7_panorama/5_conclusion.tex
+++ b/7_panorama/5_conclusion.tex
@@ -3,4 +3,4 @@
 Було розглянуто алгоритм знаходження ключових точок SIFT.
 Показано, як знаходити найкращу матрицю гомографії за 
 допомогою RANSAC. Побудовано кінцевий алгоритм створення
-панорамного знімку без викладача.
+панорамного знімку без викладача (алгоритм \ref{al:panorama_creating_algorithm}).
