--- a/9_results/1_preface.tex
+++ b/9_results/1_preface.tex
@@ -1,5 +1,6 @@
 У шостому розділі наводяться результати 
 застосування алгоритму Бойкова-Колмогорова,
-згорткових нейронних мереж  YOLOv5, MobileNetv3, SSD та
-Faster R-CNN. Показано на прикладах як працює інформаційна
-технологія для створення панорамних слайдів без викладача.
+згорткових нейронних мереж  YOLOv5, MobileNetv3, SSDLite та
+Faster R-CNN. Демонструється робота швидкої медіани для знешумлення. 
+Наводяться результати інформаційної технології для створення 
+панорамних слайдів без викладача.
