--- a/index.tex
+++ b/index.tex
@@ -66,11 +66,10 @@
 \import{8_slides/}{main.tex}
 \import{9_results/}{main.tex}
 
-
-% \clearpage
-% \phantomsection
-% \addcontentsline{toc}{chapter}{Перелік посилань}
-% \renewcommand\bibname{Перелік посилань}
-% \bibliography{bibliography.bib}
+\clearpage
+\phantomsection
+\addcontentsline{toc}{chapter}{Перелік посилань}
+\renewcommand\bibname{Перелік посилань}
+\bibliography{bibliography.bib}
 
 \end{document}
