--- a/2_abstract/2_abstract_ua.tex
+++ b/2_abstract/2_abstract_ua.tex
@@ -11,7 +11,7 @@
 
 Відеозаписи лекцій вже не рідкість в умовах дистанційного навчання.
 Відео може бути у незручному форматі для студентів або містити різні артефакти
-через стиснення з втратами, якість зйомки та  інші фактори. Добре було б мати
+через стиснення із втратами, якість зйомки та  інші фактори. Добре було б мати
 презентацію навчального матеріалу, яка містить лише текст з дошки,
 оскільки це більш наближено до формату конспекту.
 
