--- a/3_preface/2_preface.tex
+++ b/3_preface/2_preface.tex
@@ -32,8 +32,8 @@
 \textit{Предмет дослідження}~---~автоматична обробка
 відеозаписів.
 
-Метою роботи є розробка алгоритму, що перетворює відеозаписи лекцій
-лекції у панорамні знімки без викладача.
+\textit{Метою роботи} є розробка інформаційної технології, що перетворює 
+відеозапис лекції у панорамні знімки без викладача.
 
 Завдання наступні:
 \begin{enumerate}
