--- a/config.tex
+++ b/config.tex
@@ -1,17 +1,18 @@
-\def\passYear{2017}
-\def\faculty{фізико-технічний інститут}
-\def\department{Кафедра інформаційної безпеки}
-\def\departmentHead{М. В. Грайворонський}
+\def\passYear{2022}
+\def\faculty{навчально-науковий фізико-технічний інститут}
+\def\department{Кафедра математичного моделювання та аналізу даних}
+\def\departmentHead{Н. М. Куссуль}
 \def\kind{Магістерська дисертація}
-\def\specialityCode{8.04030101}
+\def\specialityCode{113}
 \def\specialityTitle{Прикладна математика}
-\def\theme{Оптимізований метод реконструкції просторової конфігурації \\
-людського обличчя в системах біометричної ідентифікації}
+\def\specialityName{Математичні методи моделювання, розпізнавання образів та комп'ютерного \\
+зору}
+\def\theme{Перетворення відеозапису з дошки у слайд-шоу}
 \def\gender{male}
-\def\course{6}
-\def\group{ФІ-51м}
-\def\name{Кригін Валерій Михайлович}
+\def\course{2}
+\def\group{ФІ-01мн}
+\def\name{Шило Максим Костянтинович}
 \def\mentorRank{к.т.н.}
-\def\mentorName{Барановський Олексій Миколайович}
-% \def\reviewerRank{т. к. ``Люксофт''}
-% \def\reviewerName{Сдобніков Віктор Юрійович}
+\def\mentorName{Водолазський Євгеній Валерійович}
+\def\reviewerRank{к.т.н., зав. відділом}
+\def\reviewerName{Мацелло Вячеслав Васильович}
